--- a/page_gene/index.html
+++ b/page_gene/index.html
@@ -41,7 +41,7 @@
                 <a title="Gene" href="page_gene/index.html">Gene </a>
             </td>
             <td class="navigation">
-                <a title="Demo" href="recordings/index.html">Other </a>
+                <a title="Demo" href="page_demo/index.html">Other </a>
             </td>
         </tr>
     </table>
