--- a/page_gene/index.html
+++ b/page_gene/index.html
@@ -116,8 +116,8 @@
                     <td><a href="index.html">Home</a></td>
                     <td><a title="MRI" href="page_mri/index.html">MRI </a></td>
                     <td><a title="Tissue" href="page_tissue/index.html">Tissue </a></td>
-                    <td><a title="Gene" href="page_gene/index.html">Gene </a></td>
-                    <td><a class="current" title="Demo" href="page_demo/index.html">Others </a></td>
+                    <td><a class="current" title="Gene" href="page_gene/index.html">Gene </a></td>
+                    <td><a title="Demo" href="page_demo/index.html">Others </a></td>
                 </tr>
             </table>
         </div>
