--- a/page_gene/index.html
+++ b/page_gene/index.html
@@ -128,8 +128,8 @@
         <section id="Published">
             <h2>Published Works</h2>
             <ul class="paper-list"></ul>
-                <li class="paper-item">
-                    <img src="doc/[子页面关键词]/p/你的图片名.png" alt="Preview" class="paper-preview-img">
+                <li class="paper-item"><!--boxing glycemic##################################################################################-->
+                    <img src="doc/gene/p/glycemic.png" alt="Preview" class="paper-preview-img">
                     
                     <div class="paper-content">
                         <span class="paper-title">这里输入你的论文标题</span>
@@ -140,7 +140,7 @@
                         
                         <div class="paper-links">
                             <a href="doc/[子页面关键词]/p/你的论文.pdf" target="_blank">Paper</a> |
-                            <a href="https://github.com/..." target="_blank">Code</a>
+                            <a href=doc/gene/code" target="_blank">Code</a>
                         </div>
                     </div>
                 </li>
