--- a/page_gene/index.html
+++ b/page_gene/index.html
@@ -140,7 +140,7 @@
                         
                         <div class="paper-links">
                             <a href="doc/[子页面关键词]/p/你的论文.pdf" target="_blank">Paper</a> |
-                            <a href=doc/gene/code" target="_blank">Code</a>
+                            <a href=https://github.com/LHY1007/INCON/tree/main/doc/gene/code" target="_blank">Code</a>
                         </div>
                     </div>
                 </li>
