--- a/page_gene/index.html
+++ b/page_gene/index.html
@@ -191,7 +191,7 @@
                     <img src="doc/gene/p/PA.png" alt="Preview" class="paper-preview-img">
                     
                     <div class="paper-content">
-                        <span class="paper-title">Physical Activity analysis</span>
+                        <span class="paper-title">Objectively measured multidimensional behaviour profiles and brain health</span>
                         <span class="paper-journal">发表/投稿期刊（预印本写Preprint）</span>
                         <span class="paper-author">作者姓名</span>
                         
